[metadata]
name = mcwc
description = A Python library for controlling a world via mcipc
url =
author = giles
author_email = gilesknap@gmail.com
license = Apache License 2.0
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    numpy
    mcwb
# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = True

[options.entry_points]
# Include a command line script
console_scripts =
    demo = demo:demo

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203, # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --flake8 --black --mypy

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
